--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "http://andriydruk.github.io/"
 languageCode = "en-us"
 title = "Andriy Druk"
 theme = "startbootstrap-clean-blog"
