--- a/config.toml
+++ b/config.toml
@@ -46,5 +46,5 @@ disqusShortname = "yetanotherandroiddeveloperblog"
   weight = -180
 
 [params.palette]
-   primary = "indigo"
-   accent  = "blue"
+   primary = "red"
+   accent  = "pink"
