--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ disqusShortname = "yetanotherandroiddeveloperblog"
 
 [params]
   DateForm = "Mon, Jan 2, 2006"
-  Description = "Hi, my name is Andriy Druk. I'm a software engineer from Ukraine."
+  Description = "Projects • Github • Twitter • About"
   Author = "Andriy Druk"
   email = "andriy.druk@gmail.com"
   Ganalytics = "UA-67278568-1"
@@ -25,27 +25,6 @@ disqusShortname = "yetanotherandroiddeveloperblog"
   # 
   # Add your tracking code as first value followed by a comma
   google_analytics = ["auto", "UA-67278568-1"]
-
-[[params.social]]
-  title = "twitter"
-  url = "https://twitter.com/AndriyDruk"
-[[params.social]]
-  title = "github"
-  url = "https://github.com/andriydruk"
-[social]
   twitter = "AndriyDruk"
   github  = "andriydruk"
   linkedin = "andriy-druk-23147344"
-
-[[menu.main]]
-  name = "home"
-  url = "/"
-  weight = -200
-[[menu.main]]
-  name = "Archives"
-  url = "/post/"
-  weight = -180
-
-[params.palette]
-   primary = "red"
-   accent  = "pink"
